name:                cwui-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cwui-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     JsonConv
                     , JsonProto
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , blaze-builder
                     , bytestring
                     , containers
                     , text
                     , vector
                     , clapi-hs

executable cwui-server
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , clapi-hs
                     , cwui-server
                     , network-simple
                     , websockets

executable example-provider
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N -Wall
  hs-source-dirs:      example-provider
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , clapi-hs
                     , clock
                     , containers
                     , mtl
                     , network
                     , network-simple
                     , tagged
                     , unagi-chan
